working user creation via url args

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,12 +8,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-{% if curernt_user.notes %}
-{% for item in current_user.list %}
-        <h1>Hello, {{item}}</h1>
-{% endfor %}
+{% if user %}
+        <h1>{{user.name}}</h1>
+        <p>username: {{user.username}}</p>
+        <p>phone: {{user.phone}}</p>
+        <p>state: {{user.state}}</p>
 {% else %}
-		<h1>Hello, world!</h1>
+        <h1>{{error}}</h1>
 {% endif %}
+
 	</body>
 </html>
