--- a/notepad/static/style.css
+++ b/notepad/static/style.css
@@ -16,6 +16,8 @@ html, body {
     }
 
 .wrapper {
+    display: flex;
+    flex-direction: column;
     max-width: 500px;
     width:100%;
     margin-left: auto;
@@ -34,6 +36,7 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 100%;
 }
 
@@ -49,10 +52,9 @@ html, body {
 }
 
 .notebuttons {
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 30%;
+    justify-content: flex-end;
 }
 
 .content {
@@ -66,38 +68,15 @@ html, body {
     margin: auto;
 }
 
-.controls {
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    max-width: 100px;
-    width:100%;
-    margin-left: 15px;
-    margin-bottom: 15px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
-}
 
 input {
     margin: 10px;
-    border: 2px solid rgba(43, 49, 53, 0.6);
-   
+    border: none;
+    border-radius: 6px ;
+    min-height: 25px;
+    min-width: 25px;
 }
 
-input[type=submit] {
-    border:none;
-    padding: 5px;
-    background-color:#507096;
-    box-shadow:0 0 6px 4px rgba(0,0,0,0.1);
-    color:#fff;
-    width: 90%;
-    font-weight:600;
-    border-radius:5px;
-    border-radius: 5px;
-}
 
 .contentinput {
     margin: 15px;
