--- a/notepad/templates/notes.html
+++ b/notepad/templates/notes.html
@@ -6,8 +6,10 @@
 {% for note in notes_to_display %}
     <div class="note">
 
-        <div class="titlebar"><div class="notetitle">{{note.title}}</div>
+        <div class="titlebar">
+            <div class="notetitle">{{note.title}}</div>
             <div class="notebuttons">
+                <a href="/add"><input type="submit" value="+"></a>
                 <a href="/edit/{{note.title}}"><input type="submit" value="&#9999"></a>
                 <a href="/delete/{{note.title}}"><input type="submit" value="&#10006"></a>
             </div>
