--- a/static/style.css
+++ b/static/style.css
@@ -33,53 +33,86 @@ html, body {
 }
 
 .titlebar {
-    margin: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    padding-bottom: 1%;
 }
 
 .notetitle {
     font-size: larger;
     font-weight: 700;
     width: 100%;
-    margin-top: auto;
+    margin-top:auto;
     margin-bottom: auto;
-    margin-left: 10px;
     justify-content: space-around;
 
 }
 
 .notebuttons {
-    width: 100%;
+    width: 25%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
+    margin: auto;
 }
 
 .content {
+    display: inline-block;
+    word-wrap: break-word;
     background: rgba(216, 216, 238, 0.4);
     border: 2px solid rgba(43, 49, 53, 0.6);
     border-radius: 5px;
     width: 100%;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
     margin: auto;
+    max-width: 100%;
 }
 
 
 input {
-    margin: 10px;
+    appearance: none;
+    margin: 2%;
+    padding: 2%;
     border: none;
     border-radius: 6px ;
     min-height: 25px;
     min-width: 25px;
+    max-width: 100%;
 }
 
+#contentinput {
+    height: 100%;
+    resize: vertical;
+    border-radius: 6px ;
+    margin: 0;
+    padding: 2%;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+#titleinput {
+    height: 100%;
+    resize: vertical;
+    border-radius: 6px ;
+    margin: 0;
+    padding: 2%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+}
 
 .contentinput {
+    display: block;
     margin: 15px;
-    width: 90%;
+    width: 100%;
     min-height: 40px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    resize: vertical;
+    overflow: hidden;
+    margin: 0;
+
 }
