--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,15 +3,16 @@
 {% block edit scoped %}
     <div class="note">
         <form action="/save/{{ note.title }}">
-        <div class="notetitle">
+        <div class="titlebar">
             <input type="text" class="titleinput" id="titleinput" name="title" value="{{ note.title }}">
+            <div class="notebuttons">
+                <input type="submit" value="&#10004" method="get">
+            </div>
         </div>
-        <div class="content">
-        <input type="text" class="contentinput" id="contentinput" name="content" value="{{ note.content}}">
+        <div class="content" contenteditable>
+        <textarea contenteditable type="text" class="contentinput" id="contentinput" name="content" rows="15">{{ note.content }}</textarea>
         </div>
-        <div class="notebuttons">
-            <input type="submit" value="&#10004" method="get">
-        </div>
+
         </form>
     </div>
 {% endblock %}
