--- a/static/style.css
+++ b/static/style.css
@@ -15,29 +15,29 @@ html, body {
     height: 100%;
     }
 
-    nav {
-        border: 1px dashed red;
-        width: 200px;
-    }
+nav {
+    border: 1px dashed red;
+    width: 200px;
+}
 
-    nav ul {
-        display: flex;
-        list-style: none;
-        flex: 0 1 auto;
-        flex-wrap: wrap;
-    }
+nav ul {
+    display: flex;
+    list-style: none;
+    flex: 0 1 auto;
+    flex-wrap: wrap;
+}
 
-    nav ul li {
-        padding: 5px;
-    }
+nav ul li {
+    padding: 5px;
+}
 
-    nav ul li button {
-        padding: 5px;
-    }
+nav ul li button {
+    padding: 5px;
+}
 
 .wrapper {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     max-width: 500px;
     width:100%;
     margin-left: auto;
@@ -45,11 +45,14 @@ html, body {
 }
 
 .note {
-    backdrop-filter: blur(4px);;
+    display: flex;
+    backdrop-filter: blur(4px);
     background: rgba(91, 133, 158, .4);
     border-radius: 5px;
     margin-bottom: 15px;
     padding: 5px;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
 .titlebar {
@@ -60,79 +63,142 @@ html, body {
     padding-bottom: 1%;
 }
 
-.notetitle {
+.title-input {
+    display: flex;
     font-size: larger;
     font-weight: 700;
-    width: 100%;
-    margin-top:auto;
-    margin-bottom: auto;
-    justify-content: space-around;
-
-}
-
-.notebuttons {
-    width: 25%;
-    display: flex;
-    justify-content: space-around;
-    margin: auto;
-}
-
-.content {
-    display: inline-block;
-    word-wrap: break-word;
-    background: rgba(216, 216, 238, 0.4);
-    border: 2px solid rgba(43, 49, 53, 0.6);
-    border-radius: 5px;
-    width: 100%;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
-    margin: auto;
-    max-width: 100%;
-}
-
-
-input {
-    appearance: none;
-    margin: 2%;
-    padding: 2%;
+    resize: vertical;
+    border-radius: 6px ;
     border: none;
-    border-radius: 6px ;
-    min-height: 25px;
-    min-width: 25px;
-    max-width: 100%;
-}
-
-#contentinput {
-    height: 100%;
-    resize: vertical;
-    border-radius: 6px ;
-    margin: 0;
-    padding: 2%;
-    background-color: rgba(255, 255, 255, 0.3);
-}
-
-#titleinput {
-    height: 100%;
-    resize: vertical;
-    border-radius: 6px ;
     margin: 0;
     padding: 2%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.3);
+
 }
 
-.contentinput {
-    display: block;
+.content-input {
+    display: flex;
+    flex: 1 0; 
     margin: 15px;
     width: 100%;
     min-height: 40px;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
     resize: vertical;
     overflow: hidden;
     margin: 0;
+    
+    font-size: larger;
+    font-weight: 700;
+    border: none;
+    border-radius: 6px ;
+    padding: 2%;
+    background-color: rgba(255, 255, 255, 0.3);
+}
 
+.notebuttons {
+    position: absolute;
+    display: inline-block;
+    right: 15px;
+    top: 15px;
+    justify-content: space-around;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    flex: 1 0;
+    margin: 5px;
+}
+
+
+.flashes ul {
+    list-style-type: none;
+}
+
+#loginDialog {
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    border: none;
+    background-color: unset;
+}
+
+#loginDialog div {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    resize: none;
+    overflow: hidden;
+    background-color: rgb(91, 133, 158);
+    padding: 8px;
+}
+
+#loginDialog .title-input {
+    margin-bottom: 6px;
+}
+
+#loginDialog::backdrop {
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(7px);
+}
+
+.big-button {
+    border: none;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+    padding: 15px;
+}
+
+.flashes {
+    border-radius: 5px;
+    background-color: #f5e0a6;
+    opacity: .5;
+    padding: 5px 10px;
+    width: 100%;
+}
+
+.add-corner {
+  background-color: #d5e4e9;
+  border: 2px solid #2284c5;
+  border-radius: 30px;
+  box-shadow: #2284c5 4px 4px 0 0;
+  color: #2284c5;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 28px;
+  padding: 0 8px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+}
+
+.add-corner:hover {
+  background-color: #d5e4e9;
+}
+
+.add-corner:active {
+  box-shadow: #2284c5 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .add-corner {
+    min-width: 120px;
+    padding: 0 25px;
+  }
 }
