--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,25 @@
 {% extends 'home.html' %}
-<title>login pls</title>
+
 {% block login %}
-<form method="post" action="/success">  
-    <table>  
-        <tr><td>email</td><td><input type = 'email' name = 'email'></td></tr>  
-        <tr><td>password</td><td><input type = 'password' name = 'pass'></td></tr>  
-        <tr><td><input type = "submit" value = "ok"></td></tr>  
-    </table>  
-</form>
+<dialogue class="note" id="loginDialogue">
+
+    <div class="titlebar">
+        <div class="notetitle">login</div>
+        <div class="notebuttons">
+
+           
+
+        </div>
+    </div>  
+    <div class="content">            
+        <form method="post" action="/success">  
+        <table>  
+            <tr><td>email</td><td><input type='email' name='email'></td></tr>  
+            <tr><td>password</td><td><input type='password' name='pass'></td></tr>  
+            <tr><td><input class="big-button" type="submit" value="&#10004"></td></tr>
+            
+        </table>  
+    </form></div>
+
+</dialogue>
 {% endblock %}
