--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,12 @@ html, body {
     }
 
 nav {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    max-height: fit-content;
     border: 1px dashed red;
+    background-color: bisque;
     width: 200px;
 }
 
@@ -113,9 +118,7 @@ form {
 }
 
 
-.flashes ul {
-    list-style-type: none;
-}
+
 
 #loginDialog {
     position: absolute;
@@ -163,6 +166,13 @@ form {
     opacity: .5;
     padding: 5px 10px;
     width: 100%;
+    color: black;
+    font-size: larger;
+    font-weight: 600;
+}
+
+.flashes ul {
+    list-style-type: none;
 }
 
 .add-corner {
@@ -175,7 +185,7 @@ form {
   display: inline-block;
   font-weight: 700;
   font-size: 28px;
-  padding: 0 8px;
+  padding: 0 25px;
   line-height: 50px;
   text-align: center;
   text-decoration: none;
@@ -196,9 +206,9 @@ form {
   transform: translate(2px, 2px);
 }
 
-@media (min-width: 768px) {
-  .add-corner {
-    min-width: 120px;
-    padding: 0 25px;
-  }
+@media screen and (min-width: 768px) {
+    .add-corner {
+    font-size: 48px;
+    padding: 10px 45px;
+    }
 }
