--- a/templates/home.html
+++ b/templates/home.html
@@ -55,8 +55,8 @@
 			you can use a fake email. it just identifies the session
 			<form method="post" action="/success">  
 
-				<input type='email' name='email' value="email" class="title-input">
-				<input type='password' name='pass' value="password" class="title-input">
+				<input type='email' name='email' placeholder='email' class="title-input">
+				<input type='password' name='password' placeholder='password' class="title-input">
 				<input class="big-button" id="emailConfirmBtn" type="submit" value="&#10004">
 		
 
