--- a/static/style.css
+++ b/static/style.css
@@ -63,50 +63,62 @@ nav ul li button {
 .titlebar {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
     padding-bottom: 1%;
 }
 
 .title-input {
     display: flex;
+    flex: 0 1 400px;
     font-size: larger;
     font-weight: 700;
     height: 100%;
-    resize: vertical;
+    resize: none;
     border-radius: 6px ;
     border: none;
     margin: 0;
     padding: 2%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.3);
-
+    white-space:nowrap;
 }
 
 .content-input {
     display: flex;
-    flex: 1 0; 
+    flex: 1 0 250px; 
     margin: 15px;
     width: 100%;
     min-height: 40px;
     resize: vertical;
     overflow: hidden;
     margin: 0;
-    
     font-size: larger;
     font-weight: 700;
     border: none;
     border-radius: 6px ;
     padding: 2%;
     background-color: rgba(255, 255, 255, 0.3);
+    
 }
 
-.notebuttons {
+.note-buttons {
     position: absolute;
-    display: inline-block;
+    display: flex;
+    width: fit-content;
     right: 15px;
     top: 15px;
+    gap: 5px;
     justify-content: space-around;
+}
+
+.note-buttons button {
+    display: flex;
+    border: none;
+    border-radius: 5px;
+    padding: 6px;
+    flex: 1 0 28px;
+    justify-content: center;
 }
 
 form {
