--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 .background {
-    background-image: url('ocean.jpg');
+    background-image: url('ocean.png');
     background-size: cover;
     position: fixed;
     left: 0px;
