--- a/templates/home.html
+++ b/templates/home.html
@@ -45,14 +45,15 @@
 	</main>
 	
 
-	<a href="/add"><button class="add-corner" role="button">&#10010</button></a>
-
+	
+	
 	<div class="background"></div>
 	
 </body>
 	<dialog id="loginDialog">
+		<div style="margin-bottom: 6px;">(you can use a fake email. it just identifies the session)</div>
         <div class="login-form">
-			you can use a fake email. it just identifies the session
+			
 			<form method="post" action="/success">  
 
 				<input type='email' name='email' placeholder='email' class="title-input" rows="1">
