--- a/templates/notes.html
+++ b/templates/notes.html
@@ -27,5 +27,7 @@
     </div>
 
 {% endfor %}
+{% else %}
+<a href="/add"><button class="add-corner" role="button">&#10010</button></a>	
 {% endif %}
 {% endblock %}
