added github link

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 		<link rel="icon" type="image/x-icon" href="static/favicon.ico">
 		<meta name="description" content="A description.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+		<title>notes app</title>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css' )}}">
 	</head>
 	<body>
@@ -17,6 +17,7 @@
 	<nav>
 		this functionality is beta af<br>
 		and yeah, there's cookies
+		<a href="https://github.com/stanjosh/notes-app">project github</a>
 		<ul>
 			
 			<li><input type="submit" value="login" id="loginButton"></a>
